hphp/hack/test/typecheck/memoize/varargs.php.exp
ERROR: File "varargs.php", line 5, characters 39-40:
Memoized functions cannot be variadic or use the type-splat operator. (NastCheck[3086])
ERROR: File "varargs.php", line 9, characters 33-34:
Memoized functions cannot be variadic or use the type-splat operator. (NastCheck[3086])
